--- a/libft_42/Makefile
+++ b/libft_42/Makefile
@@ -45,10 +45,12 @@ SRC =  	int_ops/ft_atoi.c \
 		string/ft_strncpy.c \
 		string/ft_strcpy.c \
 		string/ft_str_replace.c \
+		string/ft_free_split.c \
 		print/ft_putchar_fd.c \
 		print/ft_putstr_fd.c \
 		print/ft_putendl_fd.c \
 		print/ft_putnbr_fd.c \
+		input/get_next_line.c \
 
 BONUS = linked_lst/ft_lstadd_back_bonus.c \
 		linked_lst/ft_lstadd_front_bonus.c \
